--- a/index.scss
+++ b/index.scss
@@ -35,10 +35,6 @@ p {
   #githubStar {
     text-align: center;
     .github-button {
-      iframe {
-        // position: relative;
-        // left: 43px;
-      }
     }
   }
 }
@@ -135,25 +131,46 @@ footer {
   }
 }
 
-
-@media all and (max-width: 1024px) {
-
-}
-
 @media all and (max-width: 839px) {
+  #jumbotron { padding: 60px }
   #jumbotron .heading-container {
-    margin: 100px 0px;
+    margin: 130px 0px;
   }
+  #demo { padding: 20px }
+  #aboutWrapper {
+    margin: 0px;
+    .about-container {
+      display: flex;
+      flex-direction: column;
+      .about-details {
+        width: 100%;
+        margin: 0px;
+        padding: 0px;
+      }
+      .about-image {
+        img { max-width: 340px }
+      }
+    }
+  }
+
+  #aboutWrapper .about-container .about-details.left {
+    margin-top: 1rem;
+    margin-left: 0rem;
+    text-align: center;
+  }
+
+  #aboutWrapper .about-container .about-details.right {
+    margin-top: 1rem;
+    margin-right: 0rem;
+    text-align: center;
+  }
+
   #contributors {
-    height: 1000px;
+    height: 1200px;
   }
   #contributors .bio-container {
     display: block;
     padding: 0;
     margin: 0;
   }
-}
-
-@media all and (max-width: 480px) {
-
 }
