--- a/index.scss
+++ b/index.scss
@@ -134,21 +134,22 @@ footer {
 @media all and (max-width: 839px) {
   #jumbotron { padding: 60px }
   #jumbotron .heading-container {
-    margin: 130px 0px;
+    margin: 150px 0px;
   }
-  #demo { padding: 20px }
+  #demo { padding: 60px 20px 20px 20px }
   #aboutWrapper {
     margin: 0px;
     .about-container {
       display: flex;
       flex-direction: column;
+      margin: 50px auto;
       .about-details {
         width: 100%;
         margin: 0px;
         padding: 0px;
       }
       .about-image {
-        img { max-width: 340px }
+        img { max-width: 100% }
       }
     }
   }
