--- a/index.scss
+++ b/index.scss
@@ -174,11 +174,15 @@ footer {
 }
 
 @keyframes rain {
-  from {
+  0% {
     transform: translateY(-50%);
     opacity: 0;
   }
-  to {
+  50% {
+    transform: translateY(-10%);
+    opacity: 1;
+  }
+  100% {
     transform: translateY(0);
     opacity: 1;
   }
@@ -186,4 +190,24 @@ footer {
 .animate {
   animation-name: rain;
   animation-duration: 4s;
+  animation-timing-function: ease-out;
+}
+
+@keyframes rotate{
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(360deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+.animate svg {
+  animation-name: rotate;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  animation-delay: 4s;
 }
