--- a/index.scss
+++ b/index.scss
@@ -197,8 +197,17 @@ footer {
   0% {
     transform: rotate(0deg);
   }
+  25% {
+    transform: rotate(90deg);
+  }
+  50% {
+    transform: rotate(0deg);
+  }
+  75% {
+    transform: rotate(-90deg);
+  }
   100% {
-    transform: rotate(360deg);
+    transform: rotate(0deg);
   }
 }
 
@@ -216,8 +225,8 @@ footer {
 
 .animate svg {
   animation-name: rotate;
-  animation-timing-function: ease-out;
-  animation-duration: 2s;
+  // animation-timing-function: ease-out;
+  animation-duration: 3s;
   animation-iteration-count: infinite;
   animation-delay: 4s;
   cursor: pointer;
